# MixMyTape

./: .gitignore  App.css  App.jsx  README.md  audio_backend.py  audio_utils.py  autoencoder.py  cnn_gen.py  debug_shapes.py  export_chunked_wavs.py  extract_latents.py  latents_blues_classical_jazz_meta.json  package-lock.json  preprocessing_hifi_gan.py  pyproject.toml  remix_mixtape.py  start_app.sh  streamlit_app.py  test_remix_pipeline.py  train_autoencoder.py  umap_embed_and_merge.py  whisper_app.py
Classification/: augment.py  check_npy.py  dataset.py  inference_3s.py  kernel_sweep_results.json  main.py  model.py  model_sweep.py  preprocessing.py  pretrain.py  pretrain_sweep.py  visualize_samples.py
my-mixtape-ui/: README.md  package-lock.json  package.json
my-mixtape-ui/src/: App.css  App.js
